--- a/TP5/index.html
+++ b/TP5/index.html
@@ -15,7 +15,12 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Tri par prix croissant</button><br>
+				<button class="btn-trier-decroissant">Tri par prix decroissant</button><br>
+				<button class="btn-filter">Pièces non abordables</button><br>
+				<button class="btn-filtrer-disponible">Pièces disponibles</button>
 			</section>
+
 
 			<!-- Fiches produits -->
 			<section class="fiches">
