--- a/TP5/index.html
+++ b/TP5/index.html
@@ -18,7 +18,8 @@
 				<button class="btn-trier">Tri par prix croissant</button><br>
 				<button class="btn-trier-decroissant">Tri par prix decroissant</button><br>
 				<button class="btn-filtrer">Pièces non abordables</button><br>
-				<button class="btn-filtrer-disponible">Pièces disponibles</button>
+				<button class="btn-filtrer-disponible">Pièces disponibles</button><br>
+				<label for="">Prix: </label><input type="range" name="" id="prix" min="30" max="1000" value="1000"><label for="" id="prixchoix">1000 DHs</label>
 			</section>
 
 
